--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -9,7 +9,9 @@
 </head>
 
 <body class="body-all">
-<div class="">MEGA<img src="blender.png">MIXER
+<div class="col-size">
+</div>
+<div class="mixer">MEGA<img src="blender.png">MIXER
 </div>
 <div class="">
     <ul>
@@ -35,8 +37,8 @@
 <div>
     <div class="">
         <div class="">
-            <div class="">Nom</div>
-            <div class="">Prénom</div>
+            <div class="">Richard</div>
+            <div class="">Allan</div>
         </div>
     </div>
     <div class="">
