--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -9,11 +9,14 @@
 </head>
 
 <body class="body-all">
-<div class="col-size">
+<div class="yellow">
+    <div class="textCenter">Mega<img src="blender.png">Mixer
+
+    </div>
 </div>
-<div class="mixer">MEGA<img src="blender.png">MIXER
-</div>
-<div class="">
+
+
+<div class="Black">
     <ul>
         <li class="">
             <div class="">
