--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -10,8 +10,10 @@
 
 <body class="body-all">
 <div class="yellow">
-    <div class="textCenter">Mega<img src="blender.png">Mixer
 
+    <div class="test"><img src="blender.png" id="pic">
+        <p id="MEGA">MEGA</p>
+        <p id="MIXER">MIXER</p>
     </div>
 </div>
 <div class="black">
