--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -9,18 +10,18 @@
 </head>
 
 <body class="body-all">
-<div class="yellow">
-
-    <div class="test"><img src="blender.png" id="pic">
+<div class="orange">
+    <div class="mixers"><img src="blender.png" id="pic">
         <p id="MEGA">MEGA</p>
         <p id="MIXER">MIXER</p>
     </div>
 </div>
-<div class="black">
-    <div class=""></div>
+
+
+<div class="blackCare">
     <ul>
-        <li class="">
-            <div class="">
+        <li class="liste">
+            <div class="buttonSelect">
                 <select>
                     <option value="">2</option>
                     <option value="">3</option>
@@ -29,23 +30,25 @@
                     <option value="">6</option>
                 </select>
             </div>
+
         </li>
-        <li class="">
+        <li class="buttonPlacer">
             <button id="BoutonPlacer">PLACER</button>
         </li>
-        <li class="">
+        <li class="BoutonInitialisers">
             <button id="BoutonInitialiser" disabled>REINITIALISER</button>
         </li>
     </ul>
 </div>
-<div>
+
+<div class="">
     <div class="">
         <div class="">
-            <div class="">Richard</div>
-            <div class="">Allan</div>
+            <div class="">Nom</div>
+            <div class="">Prénom</div>
         </div>
     </div>
-    <div class="">
+    <div class="emoji2">
         <div>
             <div class="">Nom</div>
             <div class="">Prénom</div>
