--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html >
 <head>
     <meta charset="utf-8">
     <title>Mega Mixer</title>
@@ -9,97 +9,89 @@
 </head>
 
 <body class="body-all">
-<div class="orange">
-    <div class="mixers"><img src="blender.png" id="pic">
-        <p id="MEGA">MEGA</p>
-        <p id="MIXER">MIXER</p>
-    </div>
+<div class="CarreOrange">MEGA<img src="blender.png" alt="ceci est un mixeur" height="100">MIXER
 </div>
-
-
-<div class="blackCare">
+<div class="black">
     <ul>
-        <li class="liste">
-            <div class="buttonSelect">
+        <li class="">
+            <div class="">
                 <select>
                     <option value="">2</option>
                     <option value="">3</option>
-                    <option value="" selected>4</option>
-                    <option value="">5</option>
+                    <option value="">4</option>
+                    <option value=""selected>5</option>
                     <option value="">6</option>
                 </select>
             </div>
-
         </li>
-        <li class="buttonPlacer">
-            <button id="BoutonPlacer">PLACER</button>
+        <li class="boutonPlacer">
+            <button id="BoutonPlacer" disabled>PLACER</button>
         </li>
-        <li class="BoutonInitialisers">
-            <button id="BoutonInitialiser" disabled>REINITIALISER</button>
+        <li class="BoutonInitialiser">
+            <button id="BoutonInitialiser" >REINITIALISER</button>
         </li>
     </ul>
 </div>
-
-<div class="">
+<div>
     <div class="">
         <div class="">
-            <div class="">guillaume</div>
-            <div class="">Prénom</div>
+            <div class="">RICHARD</div>
+            <div class="">Allan</div>
         </div>
     </div>
-    <div class="emoji2">
+    <div class="">
         <div>
-            <div class="">Nom</div>
-            <div class="">Prénom</div>
+            <div class="">FRANCOIS</div>
+            <div class="">Guillaume</div>
         </div>
     </div>
     <div class="">
         <div class="">
-            <div class="">Nom</div>
-            <div class="">Prénom</div>
+            <div class="">PERRIN</div>
+            <div class="">Maxime</div>
         </div>
     </div>
     <div class="">
         <div class="">
-            <div class="">Nom</div>
-            <div class="">Prénom</div>
+            <div class="">PONSONNET</div>
+            <div class="">Valentin</div>
         </div>
     </div>
     <div class="">
         <div class="back smiley">
-            <div class="">Nom</div>
-            <div class="">Prénom</div>
+            <div class="">LESCEUX</div>
+            <div class="">Jason</div>
         </div>
     </div>
     <div class="">
         <div class="">
-            <div class="">Nom</div>
-            <div class="">Prénom</div>
+            <div class="">PAUL-CONSTANT</div>
+            <div class="">Anita</div>
         </div>
     </div>
     <div class="">
         <div class="">
-            <div class="">Nom</div>
-            <div class="">Prénom</div>
+            <div class="">CLAUDE</div>
+            <div class="">Madison</div>
         </div>
     </div>
     <div class="">
         <div class="">
-            <div class="">Nom</div>
-            <div class="">Prénom</div>
+            <div class="">ZIMMERMA?</div>
+            <div class="">Gregory</div>
         </div>
     </div>
     <div class="">
 
         <div class="">
-            <div class="">Nom</div>
-            <div class="">Prénom</div>
+            <div class="">FOUGEROLLE</div>
+            <div class="">Alexandre</div>
         </div>
     </div>
     <div class="">
         <div class="">
-            <div class="prenom">Nom</div>
-            <div class="nom">Prénom</div>
+            <div class="prenom">FRAPPIER</div>
+            <div class="nom">Pascal</div>
         </div>
     </div>
 </div>
