--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -58,7 +58,7 @@
         </div>
     </div>
     <div class="">
-        <div class="back smiley">
+        <div class="">
             <div class="">LESCEUX</div>
             <div class="">Jason</div>
         </div>
