centrage du text

--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -14,7 +14,7 @@
 <div class="black">
     <ul>
         <li class="">
-            <div class="">
+            <div class="select">
                 <select>
                     <option value="">2</option>
                     <option value="">3</option>
@@ -25,7 +25,7 @@
             </div>
         </li>
         <li class="boutonPlacer">
-            <button id="BoutonPlacer" disabled>PLACER</button>
+            <button id="BoutonPlacer">PLACER</button>
         </li>
         <li class="BoutonInitialiser">
             <button id="BoutonInitialiser" >REINITIALISER</button>
