--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -14,7 +14,7 @@
 <div class="black">
     <ul>
         <li class="">
-            <div class="select">
+            <div class="liste">
                 <select>
                     <option value="">2</option>
                     <option value="">3</option>
@@ -34,62 +34,62 @@
 </div>
 <div>
     <div class="">
-        <div class="">
+        <div class="smiley1"><img src="smiley/smiley-10.png" alt="ceci est un smiley">
             <div class="">RICHARD</div>
             <div class="">Allan</div>
         </div>
     </div>
-    <div class="">
+    <div class="smiley2"><img src="smiley/smiley-9.png" alt="ceci est un smiley">
         <div>
             <div class="">FRANCOIS</div>
             <div class="">Guillaume</div>
         </div>
     </div>
     <div class="">
-        <div class="">
+        <div class="smiley3"><img src="smiley/smiley-4.png" alt="ceci est un smiley">
             <div class="">PERRIN</div>
             <div class="">Maxime</div>
         </div>
     </div>
     <div class="">
-        <div class="">
+        <div class="smiley4"><img src="smiley/smiley-14.png" alt="ceci est un smiley">
             <div class="">PONSONNET</div>
             <div class="">Valentin</div>
         </div>
     </div>
     <div class="">
-        <div class="">
+        <div class="smiley5"><img src="smiley/smiley-7.png" alt="ceci est un smiley">
             <div class="">LESCEUX</div>
             <div class="">Jason</div>
         </div>
     </div>
     <div class="">
-        <div class="">
+        <div class="smiley6"><img src="smiley/smiley-8.png" alt="ceci est un smiley">
             <div class="">PAUL-CONSTANT</div>
             <div class="">Anita</div>
         </div>
     </div>
-    <div class="">
+    <div class="smiley7"><img src="smiley/smiley-13.png" alt="ceci est un smiley">
         <div class="">
             <div class="">CLAUDE</div>
             <div class="">Madison</div>
         </div>
     </div>
-    <div class="">
+    <div class="smiley8"><img src="smiley/smiley-12.png" alt="ceci est un smiley">
         <div class="">
-            <div class="">ZIMMERMA?</div>
+            <div class="">ZIMMERMAN</div>
             <div class="">Gregory</div>
         </div>
     </div>
     <div class="">
 
-        <div class="">
+        <div class="smiley9"><img src="smiley/smiley-5.png" alt="ceci est un smiley">
             <div class="">FOUGEROLLE</div>
             <div class="">Alexandre</div>
         </div>
     </div>
     <div class="">
-        <div class="">
+        <div class="smiley10"><img src="smiley/smiley-3.png" alt="ceci est un smiley">
             <div class="prenom">FRAPPIER</div>
             <div class="nom">Pascal</div>
         </div>
