--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -13,8 +13,8 @@
 </div>
 <div class="black">
     <ul>
-        <li class="">
-            <div class="liste">
+        <li class="liste">
+            <div class="buttonselect">
                 <select>
                     <option value="">2</option>
                     <option value="">3</option>
