--- a/mega-mixer-rann.html
+++ b/mega-mixer-rann.html
@@ -24,10 +24,10 @@
                 </select>
             </div>
         </li>
-        <li class="boutonPlacer">
+        <li class="liste">
             <button id="BoutonPlacer">PLACER</button>
         </li>
-        <li class="BoutonInitialiser">
+        <li class="liste">
             <button id="BoutonInitialiser" >REINITIALISER</button>
         </li>
     </ul>
